--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.0.1
-  firebase_auth: ^1.0.1
+  flutter_chat_ui: ^1.6.4
+  provider: ^6.0.3
+  uuid: ^3.0.6
+  cloud_firestore: ^3.4.8
+  firebase_auth: ^3.9.0
 
 dev_dependencies:
   flutter_test:
